# zhanggui-nl2sql

./: .gitignore  README.md  main.py  pyproject.toml
app/: jiaoben.py  ucl_honours_degree_result.json
app/agent/: context.py  graph.py  llm.py  state.py
app/agent/nodes/: add_extra_context.py  correct_sql.py  execute_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  state.py  validate_sql.py
app/api/: dependencies.py  lifespan.py
app/api/routers/: query_router.py
app/api/schemas/: query_schema.py
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: app_config.py
app/core/: log.py
app/entities/: column_info.py  metric_info.py
app/llm/: llm.py
app/models/: column_info.py  metric_info.py
app/prompt/: prompt_loader.py
app/repositories/es/: value_es_repository.py
app/repositories/mysql/dw/: dw_mysql_repository.py
app/repositories/mysql/meta/: meta_mysql_repository.py
app/repositories/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: build_meta_knowledge.py
app/services/: meta_knowledge_service.py  query_service.py
app/utils/: sql_utils.py
conf/: app_config.yaml  meta_config.yaml
frontend/: index.html
prompts/: correct_sql.prompt  extend_keywords_for_column_recall.prompt  extend_keywords_for_metric_recall.prompt  extend_keywords_for_value_recall.prompt  filter_metric_info.prompt  filter_table_info.prompt  generate_sql.prompt
(+4 files in other folders)
