[project]
name = "data-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asyncmy>=0.2.11",
    "beautifulsoup4>=4.15.0",
    "cryptography>=48.0.0",
    "elasticsearch[async]>=8,<9",
    "fastapi[standard]>=0.136.1",
    "jieba>=0.42.1",
    "langchain>=1.3.0",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.0",
    "logger>=1.4",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "path>=17.1.1",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "selenium>=4.45.0",
    "sqlalchemy>=2.0.49",
    "webdriver-manager>=4.1.2",
]
